# Risc_processor_ac

./: README.md  exeptions.py  golden_test.py  isa.py  machine.py  pyproject.toml  registers_file.py  translator.py
.github/workflows/: python.yml
examples/: cat.txt  hello_username.txt  hello_world.txt  prob2.txt  test_sub.txt
golden/: cat.yml  hello_username.yml  hello_world.yml  prob2.yml  test_sub.yml
