[tool.poetry]
name = "risc_machine"
version = "0.1.0"
description = "simple risc machine"
authors = ["arslanefimov <dns230717rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-golden = "^0.2.2"
coverage = "^5.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-golden = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true